# POO_Projet

./: Exemple.ipynb  Exemple.py  Exemple3.py  Exemple_plusieurs_stratégie.ipynb  README.md  data.parquet  fichier_donnée.csv  fichier_donnée.parquet  pyproject.toml  tests.yml
mypackage/: Backtester_Class.py  Reader_Class.py  Result_Class.py  Strategy_Class.py  Strategy_Manager_Class.py  __init__.py  lLinearRegression.py  test_backtester  utils.py
tests/: Tests2.py  rtest_tout_bete.py  test_Backtester_Class.py  test_Compare_function.py  test_Reader_Class.py  test_Result_Class.py  test_Strategy_Class.py  test_Strategy_Manager_Class.py  test_tout_bete.py  wtest_2.py
tests/tests_integration/: test_Strat_Complete.py
tests/tests_unitaires/: test_Backtester_Class.py  test_Compare_function.py  test_Reader_Class.py  test_Result_Class.py  test_Strategy_Class.py
