[tool.poetry]
name = "introduction-python"
version = "0.1.0"
description = ""
authors = ["remigenet <remi.genet@gmail.com>"]
readme = "README.md"
packages = [{include = "mypackage"}]  

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"